syntax = "proto3";

package auth;

option go_package = "./";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc AccessProtectedData(AccessRequest) returns (AccessResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message AccessRequest {
  string token = 1;
}

message AccessResponse {
  string data = 1;
}